--- a/src/css/style.css
+++ b/src/css/style.css
@@ -480,3 +480,27 @@ body {
 
 .caseStudy .card-deck .card {
   background: #fff; }
+
+.cardButtonCtrl .buttons {
+  background: #BFE2E1;
+  width: 49%;
+  float: left;
+  margin-bottom: 5px;
+  height: 40px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px; }
+  .cardButtonCtrl .buttons p {
+    color: #46AAA8;
+    font-size: 10px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 40px; }
+
+.cardButtonCtrl .buttons:first-child {
+  margin-right: 1%; }
+
+.cardButtonCtrl .buttons:last-child {
+  margin-left: 1%; }
