--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -765,3 +765,25 @@ p{
         margin-left: 1%;
     }
 }
+// ================= Mentor Profile =========
+
+.mentroProfileCardBtnCtrl{
+    .cardButtonCtrl{
+        .buttons{
+            background: #BFE2E1;
+            width: 49%;
+            float: left;
+            margin-bottom: 5px;
+            height: 40px;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            -ms-border-radius: 5px;
+            -o-border-radius: 5px;
+            p{
+                font-size: 13px !important;
+                line-height: 24px !important;
+            }
+        }
+    }
+}
